po: update po/pl_PL/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pl_PL/event.po
+++ b/po/pl_PL/event.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-10 00:42+0000\n"
+"PO-Revision-Date: 2016-09-10 23:59+0000\n"
 "Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
@@ -71,7 +71,7 @@ msgid ""
 "There are %2 people currently on the waiting list for this event. You can <a"
 " href='%1'>view waitlisted registrations here</a>, or you can continue and "
 "register additional participants using this form."
-msgstr ""
+msgstr "Jest %2 osób zarejestrowanych na liście oczekujących na to wydarzenie. Możesz <a href='%1\">zobaczyć listę oczekujących</a>, lub możesz kontynuować zapisy i rejestrować dodatkowych uczestników korzystając z tego formularza."
 
 #: CRM/Event/BAO/Query.php
 msgid "Include Repeating Events"
@@ -390,15 +390,15 @@ msgstr "Musi czekać na liście"
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status Type ID"
-msgstr ""
+msgstr "ID rodzaju statusu uczestnika"
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status Label"
-msgstr ""
+msgstr "Etykieta statusu uczestnika"
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status Class"
-msgstr ""
+msgstr "Klasa statusu uczestnika"
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status Is Reserved?>"
@@ -410,7 +410,7 @@ msgstr "Status uczestnika jest Aktywny"
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status Counts?"
-msgstr ""
+msgstr "Status uczestnika policzalny?"
 
 #: CRM/Event/DAO/ParticipantStatusType.php
 msgid "Participant Status Visibility"
@@ -591,7 +591,7 @@ msgstr "Proszę wybrać typ finansowania."
 
 #: CRM/Event/Form/ManageEvent/Fee.php
 msgid "Please enter the fee label for the paid event."
-msgstr ""
+msgstr "Proszę wprowadzić etykietę opłaty dla płatnego wydarzenia."
 
 #: CRM/Event/Form/ManageEvent/Fee.php
 msgid "Please select an appropriate option as default."
@@ -599,11 +599,11 @@ msgstr "Proszę wybrać odpowiednią opcję jako domyślną."
 
 #: CRM/Event/Form/ManageEvent/Fee.php
 msgid "Please enter a label for at least one fee level."
-msgstr ""
+msgstr "Proszę wprowadzić etykietę co najmniej jednego poziomu opłaty."
 
 #: CRM/Event/Form/ManageEvent/Fee.php
 msgid "Please enter an amount for at least one fee level."
-msgstr ""
+msgstr "Proszę wprowadzić wartość co najmniej jednego poziomu opłaty."
 
 #: CRM/Event/Form/ManageEvent/Fee.php
 msgid ""
@@ -655,7 +655,7 @@ msgid ""
 "Participation in this event requires approval. Submit your registration "
 "request here. Once approved, you will receive an email with a link to a web "
 "page where you can complete the registration process."
-msgstr ""
+msgstr "Uczestnictwo w tym wydarzeniu wymaga zatwierdzenia. Prześlij swój formularz rejestracyjny. Gdy zostanie zaakceptowane otrzymasz emailem link do strony internetowej, gdzie można dokończyć proces rejestracji."
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid "Registration Link Text"
@@ -739,7 +739,7 @@ msgstr "Proszę dodać profil z adresem email, gdy \"Wyślij email potwierdzają
 msgid ""
 "Allow multiple registrations from the same email address requires a profile "
 "of type 'Individual'"
-msgstr ""
+msgstr "Dopuść wielokrotną rejestrację z tego samego adresu e-mail wymaga profilu \"osoba\""
 
 #: CRM/Event/Form/ManageEvent/Registration.php
 msgid ""
@@ -837,7 +837,7 @@ msgstr ""
 
 #: CRM/Event/Form/Participant.php CRM/Event/Form/Task/Delete.php
 msgid "Delete only this participant record."
-msgstr ""
+msgstr "Usuń tylko ten rekord uczestnika."
 
 #: CRM/Event/Form/Participant.php
 msgid "Send Notification"
@@ -853,7 +853,7 @@ msgstr "Proszę wprowadzić typ płatności"
 
 #: CRM/Event/Form/Participant.php
 msgid "This contact has already been assigned to this event."
-msgstr ""
+msgstr "Ten kontakt został już przypisany do tego wydarzenia."
 
 #: CRM/Event/Form/Participant.php
 msgid "Selected participant was deleted successfully."
@@ -886,11 +886,11 @@ msgstr "Wybrane wydarzenie jest bezpłatne "
 
 #: CRM/Event/Form/Participant.php
 msgid "Offline Registration for Event: %2 by: %1"
-msgstr ""
+msgstr "Rejestracja offline do wydarzenia: %2 przez: %1"
 
 #: CRM/Event/Form/Participant.php
 msgid "%1 : Offline registration (by %2)"
-msgstr ""
+msgstr "%1 : Rejestracja offline (przez %2)"
 
 #: CRM/Event/Form/Participant.php
 msgid "Event registration information for %1 has been updated."
@@ -916,7 +916,7 @@ msgstr "Liczba uczestników uczestniczących w wydarzeniu: %1."
 msgid ""
 "Email has NOT been sent to %1 contact(s) - communication preferences specify"
 " DO NOT EMAIL OR valid Email is NOT present. "
-msgstr ""
+msgstr "Email NIE został wysłany do %1 kontakt(ów) - preferencje komunikacji ustawione na NIE WYSYŁAĆ MAILI lub nieprawidłowy e-mail."
 
 #: CRM/Event/Form/Participant.php
 msgid "A confirmation email has been sent to ALL participants"
@@ -1000,14 +1000,14 @@ msgstr ""
 msgid ""
 "This event is currently full. You are registering for the waiting list. You "
 "will be notified if spaces become available."
-msgstr ""
+msgstr "To wydarzenie jest już pełne. Zostałeś wpisany na listę oczekujących. Powiadomimy Ciebie, gdy zwolni się miejsce."
 
 #: CRM/Event/Form/Registration/AdditionalParticipant.php
 msgid ""
 "It looks like you are registering more participants then there are spaces "
 "available. All participants will be added to the waiting list. You will be "
 "notified if spaces become available."
-msgstr ""
+msgstr "Wygląda na to, że chcesz zarejestrować więcej uczestników niż mamy wolnych miejsc. Wszyscy uczestnicy zostali wpisani na listę oczekujących. Powiadomimy Ciebie, gdy zwolnią się miejsca."
 
 #: CRM/Event/Form/Registration/AdditionalParticipant.php
 msgid ""
@@ -1091,7 +1091,7 @@ msgstr ""
 
 #: CRM/Event/Form/Registration/AdditionalParticipant.php
 msgid "Registration information for participant %1 has been saved."
-msgstr ""
+msgstr "Dane rejestracyjne uczestnika %1 zostały zapiane."
 
 #: CRM/Event/Form/Registration/AdditionalParticipant.php
 msgid "Registration Saved"
@@ -1129,7 +1129,7 @@ msgstr "(wielu uczestników)"
 msgid ""
 "You do not have permission to access this event registration. Contact the "
 "site administrator if you need assistance."
-msgstr ""
+msgstr "Nie masz uprawnień dostępowych do tego wydarzenia. Skontaktuj się z administratorem."
 
 #: CRM/Event/Form/Registration/ParticipantConfirm.php
 msgid ""
@@ -1141,7 +1141,7 @@ msgstr "Ups. Wygląda na to, że obecnie nie ma miejsc na wydarzeniu %1."
 msgid ""
 "Your Credit Card transaction was not successful. No money has yet been "
 "charged to your card."
-msgstr ""
+msgstr "Twoja transakcja kartą płatniczą nie została zrealizowana. Pieniądze nie zostały pobrane z karty."
 
 #: CRM/Event/Form/Registration/ParticipantConfirm.php
 msgid ""
@@ -1158,7 +1158,7 @@ msgstr "Potwierdź rejestrację w %1."
 msgid ""
 "Click the \"Confirm Registration\" button to begin, or click \"Cancel "
 "Registration\" if you are no longer interested in attending this event."
-msgstr ""
+msgstr "Kliknij przycisk \"Potwierdź rejestrację\", aby rozpocząć lub przycisk \"Anuluj Rejestrację\", jeśli nie jesteś już zainteresowany uczestnictwem w tym wydarzeniu."
 
 #: CRM/Event/Form/Registration/ParticipantConfirm.php
 #: templates/CRM/Event/Page/UserDashboard.tpl
@@ -1176,16 +1176,16 @@ msgstr "Anuluj rejestrację"
 #: CRM/Event/Form/Registration/ParticipantConfirm.php
 msgid ""
 "You can cancel your registration for %1 by clicking \"Cancel Registration\"."
-msgstr ""
+msgstr "Możesz anulować swoją rejestrację na %1 przez kliknięcie \"Anuluj rejestrację\"."
 
 #: CRM/Event/Form/Registration/ParticipantConfirm.php
 msgid ""
 "Oops, it looks like your registration for %1 has already been cancelled."
-msgstr ""
+msgstr "Ooops, wygląda na to, że Twoja rejestracja na %1 została już anulowana."
 
 #: CRM/Event/Form/Registration/ParticipantConfirm.php
 msgid "%1 Event registration(s) have been cancelled."
-msgstr ""
+msgstr "Rejestracja na wydarzenie %1 została anulowana."
 
 #: CRM/Event/Form/Registration/ParticipantConfirm.php
 #: xml/templates/message_templates/participant_cancelled_html.tpl
@@ -1326,19 +1326,19 @@ msgstr "Niestety, obecnie tylko pojedyncze miejsca są dostępne dla tej opcji .
 
 #: CRM/Event/Form/Registration.php
 msgid "Sorry, currently only %1 seats are available for this option."
-msgstr ""
+msgstr "Niestety, obecnie jest dostępne tylko %1 miejsc siedzących dla tej opcji."
 
 #: CRM/Event/Form/Registration.php CRM/Event/Page/EventInfo.php
 msgid ""
 "The event you requested is currently unavailable (contact the site "
 "administrator for assistance)."
-msgstr ""
+msgstr "Wydarzenie jest obecnie niedostępne, możesz skontaktować się z administratorem strony."
 
 #: CRM/Event/Form/Registration.php
 msgid ""
 "Online registration is not currently available for this event (contact the "
 "site administrator for assistance)."
-msgstr ""
+msgstr "Rejestracja online nie jest obecnie dostępna dla tego wydarzenia. Skonsultuj się z administratorem strony by uzyskać pomoc."
 
 #: CRM/Event/Form/Registration.php
 msgid "Registration for this event begins on %1"
@@ -1417,7 +1417,7 @@ msgstr "Wydrukuj listę uczestników"
 
 #: CRM/Event/Import/Form/DataSource.php
 msgid "On Duplicate Entries"
-msgstr ""
+msgstr "W powtórzonych wpisach"
 
 #: CRM/Event/Import/Form/MapField.php
 msgid "Missing required field: Provide Participant ID"
@@ -2019,7 +2019,7 @@ msgstr "Tylko znaki alfanumeryczne, spacje, łączniki i kreski w nazwie wydarze
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.tpl
 msgid "Edit Participant Status Options"
-msgstr ""
+msgstr "Edytuj opcje statusu uczestnika"
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.tpl
 msgid ""
