po: update po/pl_PL/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pl_PL/contribute.po
+++ b/po/pl_PL/contribute.po
@@ -6,6 +6,7 @@
 # njakub <fiilozof@gmail.com>, 2014
 # Gimbus <maciek.dabrowski@wspolpracownia.pl>, 2013
 # Karolina Pomarańska <karolina@caltha.pl>, 2015
+# Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>, 2016
 # Piotr Kaczyński <www@skrzydla.lublin.pl>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Robert Cieloszczyk <robinc.pl@gmail.com>, 2013
@@ -15,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-09-12 22:22+0000\n"
+"Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -397,7 +398,7 @@ msgstr "Data Końcowa Strony Wpłaty"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Created By"
-msgstr ""
+msgstr "Strona wpłaty utworzona przez"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Created Date"
@@ -405,15 +406,15 @@ msgstr "Data Utworzenia Strony Wpłaty"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Currency"
-msgstr ""
+msgstr "Waluta strony wpłaty"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page Campaign ID"
-msgstr ""
+msgstr "ID Kampanii strony wpłaty"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Is Contribution Page Shared?"
-msgstr ""
+msgstr "Strona wpłaty jest udostępniona?"
 
 #: CRM/Contribute/DAO/ContributionProduct.php
 msgid "Product Option"
@@ -425,7 +426,7 @@ msgstr "Data wypełnienia"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Interval (number of units)"
-msgstr ""
+msgstr "Interwał (liczba lub jednostka)"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Recurring Contribution Started Date"
@@ -442,7 +443,7 @@ msgstr "Data modyfikacji wpłaty cyklicznej"
 #: CRM/Contribute/DAO/ContributionRecur.php
 #: templates/CRM/Contribute/Page/ContributionRecur.tpl
 msgid "Processor ID"
-msgstr ""
+msgstr "ID procesora płatności"
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Recurring Contribution Status"
@@ -462,7 +463,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Send email Receipt?"
-msgstr ""
+msgstr "Wysłać potwierdzenie mailem?"
 
 #: CRM/Contribute/DAO/ContributionSoft.php
 msgid "Soft Contribution ID"
@@ -1043,7 +1044,7 @@ msgstr "Wprowadź nową organizację"
 
 #: CRM/Contribute/Form/Contribution/OnBehalfOf.php
 msgid "options"
-msgstr ""
+msgstr "opcje"
 
 #: CRM/Contribute/Form/Contribution.php
 msgid "Credit Card Pledge Payment"
@@ -1499,7 +1500,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/ContributionPage/ThankYou.php
 msgid "Thanks and Receipt"
-msgstr ""
+msgstr "Podziękowanie i potwierdzenie odbioru"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "URL to Logo Image"
@@ -1523,7 +1524,7 @@ msgstr "Kolor Tekstu dodatkowego"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Background Color"
-msgstr ""
+msgstr "Kolor tła"
 
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "Background Color Top Area"
@@ -1571,7 +1572,7 @@ msgstr ""
 
 #: CRM/Contribute/Form/ContributionPage.php
 msgid "I am contributing on behalf of an organization."
-msgstr ""
+msgstr "Przekazuję darowiznę w imieniu organizacji."
 
 #: CRM/Contribute/Form/ContributionView.php
 msgid "View Contribution from"
@@ -1579,7 +1580,7 @@ msgstr "Zobacz transakcję dla"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Premium Product"
-msgstr ""
+msgstr "Produkt dodatkowy"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "A product with this name already exists. Please select another name."
@@ -1641,11 +1642,11 @@ msgstr "Wprowadź wartość pieniężną do pola Minimalna kwota dotacji."
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Image URL is Required"
-msgstr ""
+msgstr "Adres obrazka jest wymagany"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Thumbnail URL is Required"
-msgstr ""
+msgstr "Adres miniaturki jest wymagany"
 
 #: CRM/Contribute/Form/ManagePremiums.php
 msgid "Financial Type is required for product having cost."
@@ -1761,15 +1762,15 @@ msgstr ""
 #: CRM/Contribute/Form/Task/Invoice.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl
 msgid "Email Invoice"
-msgstr ""
+msgstr "Faktura na e-mail"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "Print Contribution Invoice"
-msgstr ""
+msgstr "Wydrukuj fakturę wpłaty"
 
 #: CRM/Contribute/Form/Task/Invoice.php
 msgid "PDF Invoice"
-msgstr ""
+msgstr "Faktura PDF"
 
 #: CRM/Contribute/Form/Task/Invoice.php CRM/Contribute/Form/Task/PDF.php
 msgid "Selection required"
