po: update po/sv_SE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/admin.po
+++ b/po/sv_SE/admin.po
@@ -13,8 +13,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-02 18:43+0000\n"
-"Last-Translator: Kristoffer Grundström <kristoffer.grundstrom1983@gmail.com>\n"
+"PO-Revision-Date: 2016-09-12 11:12+0000\n"
+"Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6833,7 +6833,7 @@ msgid ""
 "recurring basis. Messages used for membership renewal reminders, as well as "
 "event and activity related reminders should be created via <a "
 "href=\"%1\">Schedule Reminders</a>."
-msgstr ""
+msgstr "Meddelandemallar ger dig möjlighet att skapa liknande epostmeddelanden eller brev flera gånger. Meddelanden för påminnelser om förnyande av medlemskap liksom arrangemangs- och aktivitetetsreleaterade påminnelser bör skapas via <a href=\"%1\">Schemalagda påminnelser</a>."
 
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 msgid ""
@@ -6841,7 +6841,7 @@ msgid ""
 "However, subscribe, unsubscribe and opt-out messages are configured at <a "
 "href=\"%1\">Administer > CiviMail > Headers, Footers and Automated "
 "Messages</a>."
-msgstr ""
+msgstr "Du kan också använda meddelandemallar för innehåll i CiviMail (massutskick). Prenumerations-, uppsägnings- och avböjningsmeddelanden ska konfigureras med <a href=\"%1\">Administrera > CiviMail > Sidhuvuden, sidfötter och automatiska meddelanden</a>."
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 msgid "Cleanup reports menu"
