--- a/po/ca_ES/event.po
+++ b/po/ca_ES/event.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-18 15:42+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-09-13 09:51+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -230,7 +230,7 @@ msgstr "mostra la ubicació"
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role ID"
-msgstr "Rol per defecte"
+msgstr "Identificador de rol per defecte"
 
 #: CRM/Event/DAO/Event.php
 msgid "Confirmation Title"
@@ -2020,7 +2020,7 @@ msgstr ""
 msgid ""
 "When this Event is active, create links to the Event Information page by "
 "copying and pasting the following URL:"
-msgstr ""
+msgstr "Quan aquest esdeveniment és actiu, creeu enllaços a la pàgina d'Informació de l'esdeveniment copiant i enganxant la següent URL:"
 
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.tpl
 msgid ""
@@ -2036,7 +2036,7 @@ msgid ""
 "<strong>register and pay online</strong>, you will need to <a "
 "href='%1'>configure a Payment Processor</a> first. Then return to this "
 "screen and assign the processor to this event."
-msgstr ""
+msgstr "No s'ha configurat / activat cap processador de pagaments al vostre lloc. Si aquest és un <strong>esdeveniment amb pagament</strong> i voleu que els usuaris puguin <strong>registrar-se i fer el pagament en línia</strong>, primer necessitareu <a href='%1'>configurar un Processador de pagaments</a>. Després torneu a aquesta pantalla i assigneu el processador a aquest esdeveniment."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid "Select the currency to be used for event registration."
@@ -2152,7 +2152,7 @@ msgid ""
 " the event. This information will be displayed on the Event Information "
 "page. It will also be included in online registration pages and confirmation"
 " emails if these features are enabled."
-msgstr ""
+msgstr "Utilitzeu aquest formulari per configurar la localització i la informació opcional de contacte de l'esdeveniment. Aquesta informació es mostrarà en la pàgina d'informació de l'esdeveniment. També s'inclourà en les pàgines de registre i en els correus de confirmació si aquestes característiques estan habilitades."
 
 #: templates/CRM/Event/Form/ManageEvent/Location.tpl
 msgid ""
@@ -2462,7 +2462,7 @@ msgstr "ID:"
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
 msgid "Event Configuration"
-msgstr ""
+msgstr "Configuració de l'esdeveniment"
 
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
 msgid "Info &amp; Settings"
@@ -2574,7 +2574,7 @@ msgstr ""
 #: templates/CRM/Event/Page/EventInfo.tpl
 #: templates/CRM/Event/Page/ManageEvent.tpl
 msgid "Public Participant Listing"
-msgstr ""
+msgstr "Llistat públic de participants"
 
 #: templates/CRM/Event/Form/Participant.tpl
 msgid "This Option is already full for this event."
@@ -3653,7 +3653,7 @@ msgstr ""
 
 #: CRM/Event/DAO/Event.php
 msgid "Default Role"
-msgstr ""
+msgstr "Rol per defecte"
 
 #: CRM/Event/DAO/Event.php
 msgid "Maximum number of additional participants per registration"
