--- a/po/es_ES/financial.po
+++ b/po/es_ES/financial.po
@@ -5,6 +5,7 @@
 # Translators:
 # Adrian Torralba Roman <adriantorralba@hotmail.com>, 2016
 # ixiam <info@ixiam.com>, 2013
+# dario hereñu <magallania@gmail.com>, 2016
 # francescbassas <francesc@babu.cat>, 2014
 # ixiam <info@ixiam.com>, 2013
 # Irene Estefania <iestefania@ndi.org>, 2015
@@ -16,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-31 12:48+0000\n"
-"Last-Translator: Adrian Torralba Roman <adriantorralba@hotmail.com>\n"
+"PO-Revision-Date: 2016-09-13 23:27+0000\n"
+"Last-Translator: dario hereñu <magallania@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -190,7 +191,7 @@ msgstr ""
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Transaction Date"
-msgstr ""
+msgstr "Fecha de la transacción financiera"
 
 #: CRM/Financial/DAO/FinancialTrxn.php
 msgid "Financial Total Amount"
@@ -392,7 +393,7 @@ msgstr "Tarea"
 
 #: CRM/Financial/Form/BatchTransaction.php CRM/Financial/Form/Search.php
 msgid "- actions -"
-msgstr ""
+msgstr "- acciones -"
 
 #: CRM/Financial/Form/BatchTransaction.php
 msgid "Remove from Batch"
@@ -483,7 +484,7 @@ msgstr "Número de Transacciones"
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Please select a valid contact."
-msgstr ""
+msgstr "Por favor seleccione un contacto válido."
 
 #: CRM/Financial/Form/FinancialBatch.php
 msgid "Number of Transactions should a positive number"
