po: update po/es_ES/case.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/case.po
+++ b/po/es_ES/case.po
@@ -20,8 +20,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-06 14:24+0000\n"
-"Last-Translator: Angel_Rolando <angelramost@gmail.com>\n"
+"PO-Revision-Date: 2016-09-13 16:07+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -681,7 +681,7 @@ msgstr "Referencia"
 #: ang/crmCaseType.js
 msgid ""
 "The CiviCase XML file for this case-type prohibits editing the definition."
-msgstr ""
+msgstr "El fichero XML de CiviCase para este tipo de caso no permite editar la definición."
 
 #: templates/CRM/Case/Audit/Audit.tpl
 msgid "Incomplete"
@@ -757,7 +757,7 @@ msgstr "Filtros de búsqueda"
 #: templates/CRM/Case/Form/ActivityTab.tpl
 #: templates/CRM/Case/Page/CaseDetails.tpl
 msgid "Reporter / Assignee"
-msgstr "Informante  / cesionario"
+msgstr "Informante  / asignado"
 
 #: templates/CRM/Case/Form/ActivityToCase.tpl
 msgid "You can modify the activity subject before filing."
@@ -1106,88 +1106,88 @@ msgstr "Su rol(es) de caso"
 
 #: CRM/Case/DAO/CaseActivity.php
 msgid "Case Activity ID"
-msgstr ""
+msgstr "Identificador de actividad del caso"
 
 #: CRM/Case/DAO/CaseContact.php
 msgid "Case Contact ID"
-msgstr ""
+msgstr "Identificador de contacto del caso"
 
 #: CRM/Case/Form/CaseView.php
 msgid "(opened %1)"
-msgstr ""
+msgstr "(abierto %1)"
 
 #: CRM/Case/Form/Task/Delete.php CRM/Case/Info.php CRM/Case/Task.php
 msgid "Delete cases"
-msgstr ""
+msgstr "Borrar casos"
 
 #: CRM/Case/Info.php
 msgid "Define case types, access deleted cases"
-msgstr ""
+msgstr "Define tipos de caso, accede a casos eliminados"
 
 #: CRM/Case/Info.php
 msgid "View and edit only those cases managed by this user"
-msgstr ""
+msgstr "Ver y editar solo los casos gestionados por este usuario"
 
 #: CRM/Case/Info.php
 msgid "View and edit all cases (for visible contacts)"
-msgstr ""
+msgstr "Ver y editar todos los casos (para los contactos visibles)"
 
 #: CRM/Case/Info.php
 msgid "Open a new case"
-msgstr ""
+msgstr "Abrir un nuevo caso"
 
 #: CRM/Case/Task.php
 msgid "Export cases"
-msgstr ""
+msgstr "Exportar casos"
 
 #: CRM/Case/Task.php
 msgid "Restore cases"
-msgstr ""
+msgstr "Restaurar casos"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Homeless Services Coordinator is"
-msgstr ""
+msgstr "Es coordinador de servicios de sin hogar"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Homeless Services Coordinator"
-msgstr ""
+msgstr "Coordinador de servicios de sin hogar"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Health Services Coordinator is"
-msgstr ""
+msgstr "Es coordinador de servicios sanitarios"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Health Services Coordinator"
-msgstr ""
+msgstr "Coordinador de servicios sanitarios"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Senior Services Coordinator is"
-msgstr ""
+msgstr "Es coordinador de servicios Senior"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Senior Services Coordinator"
-msgstr ""
+msgstr "Coordinador de servicios Senior"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Benefits Specialist is"
-msgstr ""
+msgstr "Es especialista en beneficios"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Benefits Specialist"
-msgstr ""
+msgstr "Especialista en beneficios"
 
 #: ang/crmCaseType/list.html
 msgid "Case Types"
-msgstr ""
+msgstr "Tipos de csaos"
 
 #: templates/CRM/Case/Form/ActivityTab.tpl
 msgid "Reporter"
-msgstr ""
+msgstr "Informante"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Export Document"
-msgstr ""
+msgstr "Exportar documento"
 
 #: templates/CRM/Case/Form/CaseView.tpl
 msgid "Are you sure you want to end this relationship?"
-msgstr ""
+msgstr "¿Está seguro de que desea finalizar esta relación?"
