--- a/po/pl_PL/common-base.po
+++ b/po/pl_PL/common-base.po
@@ -18,7 +18,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-07-16 21:51+0000\n"
+"PO-Revision-Date: 2016-09-13 23:09+0000\n"
 "Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
@@ -25845,7 +25845,7 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Last cron run at %1."
-msgstr ""
+msgstr "Ostatnie uruchomienie crona %1"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "No cron runs have been recorded."
@@ -25853,11 +25853,11 @@ msgstr ""
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Cron Running OK"
-msgstr ""
+msgstr "Cron OK"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid "Cron Not Running"
-msgstr ""
+msgstr "Cron nie uruchomiony"
 
 #: CRM/Utils/Check/Component/Env.php
 msgid ""
