po: update po/pl_PL/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pl_PL/pledge.po
+++ b/po/pl_PL/pledge.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-10 00:46+0000\n"
+"PO-Revision-Date: 2016-09-13 23:07+0000\n"
 "Last-Translator: Marcin Lewandowski <email.marcina.lewandowskiego@gmail.com>\n"
 "Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
@@ -89,7 +89,7 @@ msgstr "Testowa deklaracja płatności"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Type - %1"
-msgstr ""
+msgstr "Rodzaj finansowania - %1"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
