po: update po/es_ES/financial.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/financial.po
+++ b/po/es_ES/financial.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-13 23:27+0000\n"
+"PO-Revision-Date: 2016-09-14 11:58+0000\n"
 "Last-Translator: dario hereñu <magallania@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -947,7 +947,7 @@ msgstr "No hay cuentas financieras asignadas a este tipo financiero. Puede  <a h
 
 #: CRM/Financial/BAO/ExportFormat.php
 msgid "Payment Method:"
-msgstr ""
+msgstr "Forma de pago:"
 
 #: CRM/Financial/BAO/FinancialType.php
 msgid ""
@@ -967,11 +967,11 @@ msgstr ""
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency ID"
-msgstr ""
+msgstr "ID Moneda"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency Symbol"
-msgstr ""
+msgstr "Símbolo de la moneda"
 
 #: CRM/Financial/DAO/Currency.php
 msgid "Currency Numeric Code"
@@ -1059,4 +1059,4 @@ msgstr ""
 msgid ""
 "Note that not all transactions are necessarily associated with a payment "
 "method."
-msgstr ""
+msgstr "Tenga en cuenta que no todas las transacciones están necesariamente asociadas con un método de pago."
