po: update po/es_ES/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/es_ES/contribute.po
+++ b/po/es_ES/contribute.po
@@ -27,7 +27,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-14 20:59+0000\n"
+"PO-Revision-Date: 2016-09-15 18:47+0000\n"
 "Last-Translator: dario hereñu <magallania@gmail.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -3626,7 +3626,7 @@ msgstr "Recibo automático"
 msgid ""
 "Check this box if you want an electronic receipt to be sent automatically to"
 " the contributor's email address."
-msgstr ""
+msgstr "Marca esta casilla si desea que se envíe automáticamente un recibo electrónico a la dirección de correo electrónico del contribuyente."
 
 #: templates/CRM/Contribute/Form/ContributionPage/ThankYou.hlp
 msgid ""
