--- a/po/fr_CA/common-base.po
+++ b/po/fr_CA/common-base.po
@@ -27,8 +27,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-09-02 18:35+0000\n"
-"Last-Translator: Rick Paré <rick.pare69@gmail.com>\n"
+"PO-Revision-Date: 2016-09-16 17:28+0000\n"
+"Last-Translator: Stéphane Lussier <stephane@symbiotic.coop>\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25636,7 +25636,7 @@ msgstr ""
 
 #: CRM/Dedupe/Merger.php
 msgid "Contact(s) were skipped."
-msgstr ""
+msgstr "Au moins un contact a été ignoré."
 
 #: CRM/Dedupe/Merger.php
 msgid "Contact ID %1 has been merged into Contact ID %2 and deleted."
