po: update po/de_DE/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/admin.po
+++ b/po/de_DE/admin.po
@@ -7,6 +7,7 @@
 # translatosaurus <accounts@drexler.eu>, 2012-2013
 # Alain Schaefer <alain.schaefer@gmail.com>, 2016
 # artd <artd@artd.ch>, 2015
+# Benny Bepunkt, 2016
 # Birdiebln <birdiebln@gmail.com>, 2014
 # Detlev Sieber <detlev.sieber@foebud.org>, 2011,2014
 # Dipti Kadu <diptikadufin@gmail.com>, 2015
@@ -16,6 +17,7 @@
 # Finn F <ffmoto95@gmail.com>, 2016
 # gnpma100 <gnpma100@gmail.com>, 2014
 # Hartmut Holzgraefe <hartmut@php.net>, 2011
+# Hubert Baumann <baumann.hubert.jun@gmail.com>, 2016
 # b2daniel <info@daniel-goetz.de>, 2016
 # Michal Seidler, 2012
 # Jan <unreal@gmx.ch>, 2013
@@ -36,8 +38,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-16 08:51+0000\n"
-"Last-Translator: Ettore Atalan <atalanttore@googlemail.com>\n"
+"PO-Revision-Date: 2016-09-17 14:07+0000\n"
+"Last-Translator: Hubert Baumann <baumann.hubert.jun@gmail.com>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -187,11 +189,11 @@ msgid ""
 "greetings on all records. Leaving that option absent, or setting it to "
 "force=0, will only rebuild greetings for contacts that do not currently have"
 " a value stored. %1"
-msgstr ""
+msgstr "Die Updatefunktion kann sehr ressourcenintensiv sein und ist in der Regel nicht notwendig in regelmäßigen Abständen laufen zu lassen. Wenn Sie diese Funktion trotzdem wählen, empfehlen wir Ihnen nicht mit der Option = 1, die alle Datensätze wieder aufbauen würde. Wenn Sie diese Option nicht wählen oder auf 0 setzen werden nur nicht vorhandene Daten erzeugt. 1%"
 
 #: CRM/Admin/Form/Job.php
 msgid "Warning: Update Greeting job enabled"
-msgstr ""
+msgstr "Warnung: Job wurde aktiviert"
 
 #: CRM/Admin/Form/LabelFormats.php
 msgid "Is this Label Format the default?"
@@ -389,7 +391,7 @@ msgid ""
 "The selected %1 option has <strong>not been deleted</strong> because it is "
 "currently in use. Please update these contacts to use a different format "
 "before deleting this option. %2"
-msgstr ""
+msgstr "Die ausgewählte %1 Option <strong> wurde nicht gelöscht </ strong>, weil sie derzeit benutzt wird. Bitte aktualisieren Sie die Kontakte in einem anderen Format bevor Sie diese Option löschen. % 2"
 
 #: CRM/Admin/Form/Options.php
 msgid "%1 Option"
@@ -705,7 +707,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "For transmission"
-msgstr ""
+msgstr "Für Übertragung"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Select the interval for due date."
@@ -713,7 +715,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Notes or Standard Terms"
-msgstr ""
+msgstr "Notizen oder Standardformeln"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enter note or message to be displayed on PDF invoice or credit notes "
@@ -725,7 +727,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Tax Term"
-msgstr ""
+msgstr "Steuerformeln"
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Tax Display Settings"
@@ -733,7 +735,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Contribute.php
 msgid "Enable Tax and Invoicing"
-msgstr ""
+msgstr "Steuern und Rechnungen aktivieren"
 
 #: CRM/Admin/Form/Preferences/Display.php
 msgid "Settings - Display Preferences"
@@ -901,7 +903,7 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid "Hashed Mailing URL's"
-msgstr ""
+msgstr "Gehashte Mail URL"
 
 #: CRM/Admin/Form/Preferences/Mailing.php
 msgid ""
@@ -942,11 +944,11 @@ msgstr ""
 
 #: CRM/Admin/Form/Preferences/Multisite.php
 msgid "Domain Group"
-msgstr ""
+msgstr "Domänengruppe"
 
 #: CRM/Admin/Form/Preferences/Multisite.php
 msgid "Contacts created on this site are added to this group"
-msgstr ""
+msgstr "Auf dieser Seite erstellte Kontakte werden der Gruppe hinzugefügt."
 
 #: CRM/Admin/Form/Preferences.php
 msgid "Your changes have been saved."
@@ -1040,7 +1042,7 @@ msgstr "Aktionsbedingung"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Repetition Condition"
-msgstr ""
+msgstr "Wiederholungsbedingung"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "From Email"
@@ -1056,7 +1058,7 @@ msgstr "Füge auch ein"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit or Add Recipients"
-msgstr ""
+msgstr "Empfänger beschränken oder hinzufügen"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit Options"
@@ -1064,11 +1066,11 @@ msgstr "Optionen zur Begrenzung"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Recipient Roles"
-msgstr ""
+msgstr "Empfängerrolle"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Manual Recipients"
-msgstr ""
+msgstr "Manuelle Empfänger"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Please select appropriate value"
@@ -1080,7 +1082,7 @@ msgstr "'Betreff' ist ein Pflichtfeld."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Please select entity value"
-msgstr ""
+msgstr "Bitte einen Eigenschaftswert wählen"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Absolute date cannot be earlier than the current time."
@@ -1305,11 +1307,11 @@ msgstr "Mailer Jobgröße"
 
 #: CRM/Admin/Form/Setting/Mail.php
 msgid "Mailer CRON job limit"
-msgstr ""
+msgstr "Mailer cronjob Limit"
 
 #: CRM/Admin/Form/Setting/Mail.php
 msgid "The job size must be at least 1000 or set to 0 (unlimited)."
-msgstr ""
+msgstr "Die Jobgröße muss mindestens 1000 betragen (0 für unlimitiert)"
 
 #: CRM/Admin/Form/Setting/Mail.php
 msgid ""
@@ -1597,7 +1599,7 @@ msgstr "URL für Bilder-Uploads"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Custom css URL"
-msgstr ""
+msgstr "Benutzerdefinierte CSS URL"
 
 #: CRM/Admin/Form/Setting/Url.php
 msgid "Extension Resource URL"
@@ -1895,11 +1897,11 @@ msgstr "Erweiterung herunterladen"
 
 #: CRM/Admin/Page/Extensions.php
 msgid "Disabled (Missing)"
-msgstr ""
+msgstr "Deaktiviert (Nicht gefunden)"
 
 #: CRM/Admin/Page/Extensions.php
 msgid "Enabled (Missing)"
-msgstr ""
+msgstr "Aktiviert  (Nicht gefunden)"
 
 #: CRM/Admin/Page/ExtensionsUpgrade.php
 msgid "Database Upgrades"
@@ -2203,16 +2205,16 @@ msgstr "Tag zusammenführen"
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Permissions: Summary"
-msgstr ""
+msgstr "Zugriffsrechte: Zusammenfassung"
 
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html
 msgid "Permissions: Details"
-msgstr ""
+msgstr "Zugriffsrechte: Details"
 
 #: ang/crmCxn/AdvTable.html
 msgid "Property"
-msgstr ""
+msgstr "Eigenschaft"
 
 #: ang/crmCxn/ConfirmConnectCtrl.html
 msgid "The application, \\\"%1\\\", requests permission to access your system."
@@ -2256,7 +2258,7 @@ msgstr "Siehe auch:"
 
 #: ang/crmCxn/Connectivity.html
 msgid "Firewalls and Proxies"
-msgstr ""
+msgstr "Firewall und Proxies"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid ""
@@ -2266,7 +2268,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Existing Connections"
-msgstr ""
+msgstr "Existierende Verbindung"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: About"
@@ -2282,7 +2284,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Logs"
-msgstr ""
+msgstr "Logs"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Documentation (External)"
@@ -2302,7 +2304,7 @@ msgstr "Unterstützung"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "%1: Reconnect"
-msgstr ""
+msgstr "%1: Erneut verbinden"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Reconnect"
@@ -2316,7 +2318,7 @@ msgstr "%1: Trennen"
 msgid ""
 "Are you sure you want to disconnect \"%1?\". Doing so may permanently "
 "destroy data linkage."
-msgstr ""
+msgstr "Möchten Sie wirklich die Verbindung zu \"%1\" trennen? Wenn Sie fortfahren, könnte die Datenverbindung unwiderruflich zerstört werden."
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "Disconnect"
@@ -2336,15 +2338,15 @@ msgstr "Verbinden"
 
 #: ang/crmCxn/ManageCtrl.html
 msgid "No available applications"
-msgstr ""
+msgstr "Keine verfügbaren Applikationen"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Application List Unavailable"
-msgstr ""
+msgstr "Liste von Applikationen nicht verfügbar"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Internet Access Required"
-msgstr ""
+msgstr "Internetzugriff erforderlich"
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Connecting..."
@@ -2378,7 +2380,7 @@ msgstr ""
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Cannot open link. Unrecognized mode."
-msgstr ""
+msgstr "Link kann nicht geöffnet werden. Unbekannter Modus."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Opening..."
@@ -3145,7 +3147,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
 msgid "Individual Name Fields"
-msgstr ""
+msgstr "Persönliche Namensfelder"
 
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
 msgid "Other Panes"
@@ -3244,7 +3246,7 @@ msgstr ""
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "Enable repetition."
-msgstr ""
+msgstr "Wiederholung aktivieren."
 
 #: templates/CRM/Admin/Form/ScheduleReminders.tpl
 msgid "You can manually send out the reminders to these recipients."
