po: update po/pt_BR/report.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/pt_BR/report.po
+++ b/po/pt_BR/report.po
@@ -7,6 +7,7 @@
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013-2014
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2011
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2011
+# Everton Mateus Jacobsen <everton.jacobsen22@gmail.com>, 2016
 # Pascal Daniel Angst <pascal.angst@gmail.com>, 2014
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Van Der Fran <transifex@vanderland.com>, 2011
@@ -14,8 +15,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:09+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-09-17 14:53+0000\n"
+"Last-Translator: Everton Mateus Jacobsen <everton.jacobsen22@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1655,7 +1656,7 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Nick Name"
-msgstr ""
+msgstr "Apelido"
 
 #: CRM/Report/Form.php
 msgid "Contact Suffix"
@@ -1667,7 +1668,7 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Contact Job title"
-msgstr ""
+msgstr "Cargo"
 
 #: CRM/Report/Form.php
 msgid "Contact identifier from external system"
@@ -2137,7 +2138,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Last Year Total"
-msgstr ""
+msgstr "Total Último Ano"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Lifetime Total"
@@ -2149,7 +2150,7 @@ msgstr ""
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Total amount last year"
-msgstr ""
+msgstr "Valor Total último ano"
 
 #: CRM/Report/Form/Contribute/Lybunt.php
 msgid "Total for "
@@ -2173,7 +2174,7 @@ msgstr ""
 
 #: CRM/Report/Form/Event/ParticipantListing.php
 msgid "Participant Fee"
-msgstr ""
+msgstr "Taxa de Participação"
 
 #: CRM/Report/Form/Instance.php
 msgid "Configure link to..."
@@ -2181,7 +2182,7 @@ msgstr ""
 
 #: CRM/Report/Form/Instance.php templates/CRM/Report/Page/InstanceList.tpl
 msgid "View Results"
-msgstr ""
+msgstr "Resultados"
 
 #: CRM/Report/Form/Instance.php
 msgid "Show Criteria"
@@ -2221,7 +2222,7 @@ msgstr ""
 
 #: CRM/Report/Form.php
 msgid "Developer"
-msgstr ""
+msgstr "Desenvolvedor"
 
 #: CRM/Report/Form.php
 msgid "Grand Total"
@@ -2249,20 +2250,20 @@ msgstr ""
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Print report"
-msgstr ""
+msgstr "Imprimir relatório"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Export to csv"
-msgstr ""
+msgstr "Exportar para cvs"
 
 #: CRM/Report/Page/InstanceList.php
 msgid "Delete report"
-msgstr ""
+msgstr "Deletar relatório"
 
 #: CRM/Report/Page/InstanceList.php
 msgid ""
 "Are you sure you want delete this report? This action cannot be undone."
-msgstr ""
+msgstr "Você tem certeza que deseja deletar esse relatório? Ação não pode ser desfeita"
 
 #: templates/CRM/Report/Form/Tabs/Instance.tpl
 msgid "Link to "
