--- a/po/pt_BR/case.po
+++ b/po/pt_BR/case.po
@@ -6,14 +6,15 @@
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2012,2014
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2013
 # Diego Viegas <diego.viegas@dotpro.com.br>, 2012
+# Everton Mateus Jacobsen <everton.jacobsen22@gmail.com>, 2016
 # Piotr Szotkowski <chastell@chastell.net>, 2011
 # Wesley Ferreira <contato@wesleyferreira.adv.br>, 2012
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-09-17 14:54+0000\n"
+"Last-Translator: Everton Mateus Jacobsen <everton.jacobsen22@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -25,7 +26,7 @@ msgstr ""
 #: xml/templates/message_templates/case_activity_html.tpl
 #: xml/templates/message_templates/case_activity_text.tpl
 msgid "View activity"
-msgstr ""
+msgstr "Exibir atividade"
 
 #: CRM/Case/BAO/Case.php
 msgid "no subject"
@@ -579,11 +580,11 @@ msgstr ""
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Medical evaluation"
-msgstr ""
+msgstr "Avaliação médica"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Mental health evaluation"
-msgstr ""
+msgstr "Avaliação mental"
 
 #: CRM/Case/xml/configuration.sample/case_sample.mysql.tpl
 msgid "Secure temporary housing"
